k8s/worldCup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wc-deployment
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: wc-backend
          image: ilyeselayeb/wc-backend:latest
          ports:
            - containerPort: 3333
          lifecycle:
            postStart:
              exec:
                command: ["node", "ace", "migration:run","--force"]
---
apiVersion: v1
kind: Service
metadata:
  name: wc-cluster-ip
spec:
  type: ClusterIP
  ports:
    - targetPort: 3333
      port: 3333
  selector:
    app: api
